# esp-resso

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
.github/workflows/: ci.yml
components/core/: CMakeLists.txt
components/core/include/core/: boiler.h  brew.h  buttons.h  filter.h  load_guard.h  pid.h  pump_guard.h  rtd.h  safety.h  settings.h  state_machine.h  types.h  ui.h
components/core/src/: boiler.c  brew.c  buttons.c  filter.c  load_guard.c  pid.c  pump_guard.c  rtd.c  safety.c  settings.c  state_machine.c  ui.c
components/drivers/: CMakeLists.txt
components/drivers/include/drivers/: font5x7.h  i2c_bus.h  max31865.h  pcf8574.h  pins.h  ssd1306.h
components/drivers/src/: hal_esp32.c  hal_esp32_actuators.c  hal_esp32_display.c  hal_esp32_input.c  hal_esp32_sensors.c  hal_esp32_storage.c  hal_esp32_temp.c  hal_esp32_time.c  i2c_bus.c  max31865.c  pcf8574.c  ssd1306.c
components/espresso_hal/: CMakeLists.txt
components/espresso_hal/include/hal/: hal.h  hal_display.h  hal_heater.h  hal_input.h  hal_level.h  hal_storage.h  hal_temp.h
components/hal/: CMakeLists.txt
components/hal/include/hal/: hal.h  hal_display.h  hal_flow.h  hal_level.h  hal_pump.h  hal_temp.h  hal_time.h  hal_valve.h
docs/: architecture.md  building.md  control.md  hardware.md  level-sensing.md  networking.md  power.md  safety.md  testing.md  ui.md
docs/adr/: 0001-use-esp-idf.md  0002-portable-core-hal.md
kicad/espresso/: espresso.kicad_pcb  espresso.kicad_pro  espresso.kicad_sch
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c
main/include/: app.h
main/tasks/: control_task.c  net_task.c  safety_task.c  ui_task.c
scripts/: flash.ps1  flash.sh  format.ps1  format.sh  test-host.ps1  test-host.sh
tests/: CMakeLists.txt  CMakePresets.json  test_boiler.c  test_brew.c  test_buttons.c  test_filter.c  test_hal_mock.c  test_load_guard.c  test_pid.c  test_pump_guard.c  test_rtd.c  test_safety.c  test_settings.c  test_state_machine.c  test_ui.c
tests/support/: fake_clock.c  fake_clock.h
